--- a/config.yaml
+++ b/config.yaml
@@ -2,7 +2,7 @@ baseURL: "https://harpi.github.io"
 languageCode: "en-us"
 title: "harpi - Cybersecurity Portfolio"
 description: "Pentesting | HTB Writeups | Research"
-theme: "terminal-fluo"
+theme: "terminal"
 # This message is only used by the RSS template.
 copyright: ""
 
@@ -316,3 +316,10 @@ related:
   #
   #   theme      = ""
   #
+  
+caches:
+images:
+  dir: :cacheDir/images
+
+module.imports:
+  path: 'github.com/panr/hugo-theme-terminal/v4'
