--- a/config.yaml
+++ b/config.yaml
@@ -192,7 +192,7 @@ params:
   #showLastUpdated = false
 
   # set a custom favicon (default is a `themeColor` square)
-  favicon: "./static/favicon.ico"
+  favicon: "favicon.ico"
 
   # Provide a string as a prefix for the last update date. By default, it looks like this: 2020-xx-xx [Updated: 2020-xx-xx] :: Author
   # updatedDatePrefix = "Updated"
@@ -316,10 +316,10 @@ related:
   #
   #   theme      = ""
   #
-  
+
 caches:
 images:
   dir: :cacheDir/images
 
 module.imports:
-  path: 'github.com/panr/hugo-theme-terminal/v4'
+  path: "github.com/panr/hugo-theme-terminal/v4"
