--- a/config.yaml
+++ b/config.yaml
@@ -192,7 +192,7 @@ params:
   #showLastUpdated = false
 
   # set a custom favicon (default is a `themeColor` square)
-  favicon: "favicon.ico"
+  favicon: "images/profile.png"
 
   # Provide a string as a prefix for the last update date. By default, it looks like this: 2020-xx-xx [Updated: 2020-xx-xx] :: Author
   # updatedDatePrefix = "Updated"
@@ -227,7 +227,7 @@ menu:
     - identifier: "about"
       name: "About"
       url: "/about/"
-      weight: 20
+      weight: 50
     - identifier: "research"
       name: "Research"
       url: "/research/"
@@ -235,11 +235,11 @@ menu:
     - identifier: "blog"
       name: "Blog"
       url: "/blog/"
-      weight: 40
+      weight: 20
     - identifier: "htb"
       name: "HTB"
       url: "/htb/"
-      weight: 50
+      weight: 40
 
 # Must be usefull, not sure what it is
 taxonomies:
